--- a/css/index.css
+++ b/css/index.css
@@ -9,11 +9,12 @@ body {
 	background-color: rgb(245, 245, 245);
 }
 
+/* Menu de navegacion*/
 header {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	background: #252932;
+	background: #000000;
 	padding: 10px;
 }
 
@@ -22,6 +23,7 @@ header {
 	font-size: 25px;
 }
 
+/**/
 .main-nav {
 	list-style: none;
 	margin: 5px 10px;
@@ -39,7 +41,7 @@ header {
 }
 
 .main-nav__item a:hover {
-	background: #f56f3a;
+	background:  rgb(255, 165, 0);
 	border-radius: 50px;
 }
 
