--- a/css/registro.css
+++ b/css/registro.css
@@ -6,46 +6,78 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-}
-
-img {
-    width: 70%;
-    margin: 0 auto;
+    padding: 5%;
+    background-image: -moz-linear-gradient(90deg, rgb(255, 165, 0) 50%, rgb(0, 0, 0) 50%);
+    background-image: -webkit-linear-gradient(90deg, rgb(255, 165, 0) 50%, rgb(0, 0, 0) 50%);
+    background-image: -ms-linear-gradient(90deg, rgb(255, 165, 0) 50%, rgb(0, 0, 0) 50%);
 }
 
 section {
     display: flex;
-    flex-direction: column;
-    padding: 50px;
-    width: 420px;
+    flex-direction: row;
+    background-color: #fff;
+    margin: 10px;
+    padding: 10px;
     box-shadow: 0 0 20px rgb(0, 0, 0, 0.2);
     border-radius: 10px;
-    text-align: center;
 }
 
-.cargarImagen {
+.textoDescripcion,
+.formulario {
+    flex: 1;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    margin: 5px;
+}
+
+.textoDescripcion>h1 {
+    margin-bottom: 20px;
+}
+
+.btIndicaciones {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 15px;
+    color: white;
+    background: rgb(255, 165, 0);
+    border-radius: 50px;
+    text-decoration: none;
+}
+
+.textoDescripcion {
+    text-align: center;
+    color: #fff;
+    background-color: #1c1934;
+    border-radius: 5px;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
-.cargarImagen>button {
-    flex-shrink: 0;
-    width: 80px;
-    align-self: baseline;
+/* Fomrulario y su contenido*/
+.formulario {
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    text-align: center;
 }
 
-.cargarImagen>input {
-    flex: 1;
-    margin-right: 10px;
-}
-
-section>h2 {
+.formulario>h2 {
     font-size: 25px;
     margin-bottom: 20px;
+}
+
+.contendorImagen {
+    height: 200px;
+    border: 1px solid rgba(76, 76, 76, 0.2);
+    border-radius: 5px;
+}
+
+img {
+    max-width: 90%;
+    max-height: 90%;
 }
 
 input,
@@ -76,15 +108,6 @@ select {
     cursor: pointer;
 }
 
-.btCargar {
-    padding: 7px;
-    border: none;
-    background-color: #26a1da;
-    color: rgb(255, 255, 255);
-    border-radius: 5px;
-    cursor: pointer;
-}
-
 .btRegristrar {
     background-color: #4CAF50;
 }
@@ -95,10 +118,4 @@ select {
 
 .btCancelar {
     background-color: #da2626;
-}
-
-.contendorImagen {
-    height: 200px;
-    border: 1px solid rgba(76, 76, 76, 0.2);
-    border-radius: 5px ;
 }
