--- a/css/instrucciones.css
+++ b/css/instrucciones.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    padding-bottom: 50px;
+    background-color: rgb(246, 246, 246);
 }
 
 /* Menu de navegacion */
@@ -51,12 +51,20 @@ header {
     color: white;
 }
 
+.laEmpresa> div > h1 {
+    font-size: 30px;
+}
+
+.laEmpresa> div > p {
+    font-size: 17px;
+}
+
 .background-image {
     position: relative;
     z-index: 0;
     background-image: url('../assets/fondo.jpg');
     background-size: cover;
-    padding: 50px 100px;
+    padding: 80px 150px;
 }
 
 .background-image::after {
@@ -74,34 +82,70 @@ header {
     margin-top: 10px ;
 }
 
+/*Seccion instrucciones*/
+.instrucciones {
+    margin: 20px 10px;
+}
+
+/*Contendor de parrafos para las instrucciones*/
+.parrafoInstrucciones{
+    background-color: white;
+    padding: 30px;
+}
+
+/*Contendor de parrafos para las instrucciones subrayado*/
+.parrafoInstrucciones > h2 >u {
+    text-decoration-color: rgb(255, 165, 0);
+}
+
 /*Contenedor de instruccion*/
 .contenedorInstrucciones {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 /*Contenedor pasos 1 y 2*/
 .pasos1y2 {
     display: flex;
     flex-direction: row;
-    padding: 20px;
 }
 
 .pasos1y2 > div {
     width: 50%;
     font-size: 16px;
+    padding: 50px;
+    background-color: white;
+}
+
+.pasos1y2 > div > h3{
+    margin-bottom: 20px;
+}
+
+.paso1 {
+    margin-right: 10px;
 }
 
 /*Contenedor pasos 3 y 4*/
 .pasos3y4 {
     display: flex;
     flex-direction: row;
-    padding: 20px;
+    margin-top: 10px;
 }
 
 .pasos3y4 > div {
     width: 50%;
     font-size: 16px;
+    padding: 50px;
+    background-color: white;
 }
+
+.paso3 {
+    margin-right: 10px;
+}
+
+.pasos3y4 > div > h3{
+    margin-bottom: 20px;
+}
+
 
 
 
